# ExampleImage

./: CMakeLists.txt  README.md  example_image.cpp  galaxy.fits
